--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tomtom-international/web-sdk-maps": "^6.25.0",
+    "@tomtom-international/web-sdk-services": "^6.25.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-router-dom": "5.3.4",
-    "react-scripts": "3.2.0"
+    "react-router-dom": "^5.3.4",
+    "react-scripts": "3.2.0",
+    "react-transition-group": "^4.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
