--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-validator": "^7.0.1",
+    "mongoose": "^5.7.8",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
