--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,9 @@
     "axios": "^1.5.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "express-validator": "^7.0.1",
+    "express-validator": "^6.2.0",
     "mongoose": "^5.7.8",
+    "mongoose-unique-validator": "^2.0.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
